# Koram

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
config/: koram.example.toml
docs/: index.html
docs/plans/: 2026-05-06-koram-face-graph.md
docs/specs/: 2026-05-06-koram-face-graph-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  main.js
frontend/src/lib/: api.js  constants.js  persistence.js  store.js  store.svelte.js  utils.js
frontend/src/lib/components/: ConnectionStatus.svelte  DateRange.svelte  DisplayControls.svelte  ExportFab.svelte  GraphCanvas.svelte  HelpDialog.svelte  PeopleList.svelte  PersonRow.svelte  SettingsDrawer.svelte  TopBar.svelte
frontend/src/lib/graph/: force.js  force.test.js  jaccard.js  jaccard.test.js  png-export.js  png-export.test.js  render-canvas.js  render-svg.js
frontend/src/styles/: global.css
src/: config.rs  error.rs  lib.rs  main.rs
src/cooccurrence/: cache.rs  compute.rs  mod.rs
src/immich_api/: mod.rs
src/job/: mod.rs
src/web/: mod.rs  state.rs
src/web/handlers/: config.rs  graph.rs  health.rs  mod.rs  people.rs  upload.rs  ws.rs
